--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,12 @@
   "name": "SAML to AWS STS Keys Conversion",
   "description": "Generates file with AWS STS Keys after logging in to AWS webconsole using SSO (SAML 2.0). It leverages 'assumeRoleWithSAML' API.",
   "version": "2.7",
-  "icons": {  "16": "icons/icon_16.png",
-              "32": "icons/icon_32.png",
-              "48": "icons/icon_48.png",
-              "128": "icons/icon_128.png" },
+  "icons": {
+    "16": "icons/icon_16.png",
+    "32": "icons/icon_32.png",
+    "48": "icons/icon_48.png",
+    "128": "icons/icon_128.png"
+  },
   "browser_action": {
     "default_icon": "icons/icon_32.png",
     "default_popup": "popup/popup.html"
@@ -19,7 +21,7 @@
   "options_page": "options/options.html",
   "permissions": [
     "webRequest",
-    "<all_urls>",
+    "https://signin.aws.amazon.com/saml",
     "storage",
     "downloads",
     "tabs"
